--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	
 	<body>
 		<p>Sorry...still under construction..Takes 2 more months..! </p>
+		<script src="//code.tidio.co/u2t6yeeymfupwg0jvhbmtmawsweunafd.js" async></script>
 	</body>
 </html>
