--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	</head>
 	
 	<body>
-		<p>Sorry.......still under construction..Takes 2 more months.........! </p>
+		<p>Sorry.........still under construction..Takes 2 more months.........! </p>
 	</body>
 </html>
