--- a/src/certificates.html
+++ b/src/certificates.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="icon" href="website_logo.jpg" type="image/x-icon">
+        <link rel="icon" href="../assets/website_logo.jpg" type="image/x-icon">
         <title>Certificates of Sathyamshu</title> 
 
         <style>
@@ -17,7 +17,7 @@
                 onButtonClick("some addresss");
             }
 
-            var addressses = [ "codevitacert.png", "pixelcert.jpg", "elixircert.jpg", "moccert.jpg", "suprajacert.jpg" ];
+            var addressses = [ "../assets/codevitacert.png", "../assets/pixelcert.jpg", "../assets/elixircert.jpg", "../assets/moccert.jpg", "../assets/suprajacert.jpg" ];
 
             function onButtonClick(idx) {
                 document.getElementById("imageplace").src = addressses[idx] ;
@@ -29,7 +29,7 @@
     <body style="background-color:white;">
         <div class="container">
             <div class="container-left">
-                <img src = "transparent1.png" width=100%; height=100%;> 
+                <img src = "../assets/transparent1.png" width=100%; height=100%;> 
             </div>
             <div class="container-middle">
         <center><h3 style="color:black"> Certificates of Sathyamshu ... !</h3>
@@ -39,11 +39,11 @@
         <button class="names" onclick="onButtonClick(3)"  > <u> Master Orator Championship 2018</u></button>
         <button class="names" onclick="onButtonClick(4)"  > <u> Supraja Technologies 2018 </u></button>
         <br><br><br>    
-        <img id="imageplace" src="website_logo.jpg" width="960" height="600">
+        <img id="imageplace" src="../assets/website_logo.jpg" width="960" height="600">
         </center>
     </div>
     <div class="container-right">
-        <img src = "transparent2.png" width=100%; height=100%;> 
+        <img src = "../assets/transparent2.png" width=100%; height=100%;> 
     </div>
     </body>
 </html>
