--- a/src/chatarea.html
+++ b/src/chatarea.html
@@ -33,6 +33,7 @@
     <body style="background-color:black;">
         <label class="lisatextlabel"> Welcome ...! I am Lisa, Sathyamshu's assitant bot </label> <br><br>
         <label class="lisatextlabel"> May I know your good Name please ... </label> <br><br>
+        <label class="lisatextlabel"> Sorry Please, I am still under Development. Hope I'll get a chance to chat with You in soon . </label> <br><br>
         <label class="userprompt"> @Anonymous User $</label>
         <span id="cursor"> || </span>
         
