--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a target="_blank" href="src/ballgame.html"> <button class="panel-inner-buttons"> Ball game <i class="fa fa-futbol-o" aria-hidden="true"></i>  </button></a>
                 <a target="_blank" href="src/sudoku.html"><button class="panel-inner-buttons"> Sudoku Solver  </button> </a>
                 <a target="_blank" href="https://github.com/Sathyamshu2357/Automate_JNTUA_results"><button class="panel-inner-buttons">Automate JNTUA results <i class="fa fa-table" aria-hidden="true"></i> </button></a>
-                <a target="_blank" href="https://www.github.com/sathyamshu2357/google meet attendance reader"><button class="panel-inner-buttons"> G-Meet Attendance Reader <i class="fa fa-video-camera" aria-hidden="true"></i></button></a>
+                <a target="_blank" href="https://github.com/Sathyamshu2357/Gmeet_Attendance_Reader"><button class="panel-inner-buttons"> G-Meet Attendance Reader <i class="fa fa-video-camera" aria-hidden="true"></i></button></a>
                 <a target="_blank" href="https://github.com/Sathyamshu2357/word_generator"><button class="panel-inner-buttons"> Word Generator </button> </a>
                 
                 <a class="panelbuttons" target="_blank" href="assets/Resume-Sathyamshubhava.pdf" ><button class="panelbuttons" ><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Formal CV  </button></a>
