--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <li> Student's Results of a class/college can be automated within seconds and can analyse them in an Excel sheet </li>
                     </ul>
 
-                    <li> Google Meet Attending and Attendance Reader ( using Puppeteer & Apps Script ) - (90% completed) </li>
+                    <li> Google Meet Attending and Attendance Reader ( using Puppeteer & Sheets API ) </li>
                     <ul>
                         <li> A bot can attend the class representing You </li>
                         <li> Can read the time attended by each participant </li>
