--- a/src/ballgame.html
+++ b/src/ballgame.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> A 2 Player Ball Game</title>
-        <link rel="icon" href="website_logo.jpg" type="image/x-icon">
+        <link rel="icon" href="../assets/website_logo.jpg" type="image/x-icon">
 
         <style>
             div.container { height:80%; }
