--- a/src/chatarea.html
+++ b/src/chatarea.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="icon" href="website_logo.jpg" type="image/x-icon">
+        <link rel="icon" href="../assets/website_logo.jpg" type="image/x-icon">
         <title> Sathyamshu's Chat Bot </title>
     
         <style>
