--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             .panel-inner-buttons { text-align:center; width:99.9%; height:7%; background-color: lightgreen; color:black; cursor: pointer; display: none;}
             .panelfixedbuttons { text-align:center; width:15%; height:8%; background-color: green; color:white; cursor: pointer; font-size: 15px; position: fixed;}
 
-            .example::-webkit-scrollbar { display: none; } <!-- For Chrome and Safari-->
-            .example { -ms-overflow-style: none; scrollbar-width: none; } <!-- For IE,Edge and  Firefox-->
+            .example::-webkit-scrollbar { display: none; }
+            .example { -ms-overflow-style: none; scrollbar-width: none; } 
            
         </style>
 
@@ -62,7 +62,7 @@
                 <br style="line-height:3px;">
                 <a target="_blank" href = "src/certificates.html" > <button class="panelbuttons"> Certificates </button></a>
                 
-                <button onclick="dropList(value)" style="display: block;" id="open-close" class="panelbuttons"  value="0"> Projects <i id="icon1" class="fa fa-sort-desc " aria-hidden="true"></i><i id="icon2" style="display: none; float: right;" class="fa fa-sort-asc" aria-hidden="true"></i></button>
+                <button onclick="dropList(value)" style="display: block;" id="open-close" class="panelbuttons"  value="0"> Projects <i id="icon1" style="float: right;" class="fa fa-sort-desc " aria-hidden="true"></i><i id="icon2" style="display: none; float: right;" class="fa fa-sort-asc" aria-hidden="true"></i></button>
                 <a target="_blank" href="src/ballgame.html"> <button class="panel-inner-buttons"> Ball game <i class="fa fa-futbol-o" aria-hidden="true"></i>  </button></a>
                 <a target="_blank" href="https://github.com/Sathyamshu2357/Automate_JNTUA_results"><button class="panel-inner-buttons">Automate JNTUA results <i class="fa fa-table" aria-hidden="true"></i> </button></a>
                 <a target="_blank" href="https://github.com/Sathyamshu2357/Gmeet_Attendance_Reader"><button class="panel-inner-buttons"> G-Meet Attendance Reader <i class="fa fa-video-camera" aria-hidden="true"></i></button></a>
