--- a/index.html
+++ b/index.html
@@ -122,14 +122,15 @@
                 <h3> Technical Skills </h3>
                 <ul>
                     <li> Programming Languages : Python, Java, C</li>
-                    <li> Database Languages : mySql</li>
+                    <li> Database Languages : NoSql</li>
                     <li> Web Development Languages : HTML, CSS, JavaScript</li>
                     <li> Google Developer Tools : Puppeteer, Apps Script</li>
+                    <li> Mobile App Development : Flutter </li>
                 </ul>
 
                 <h3> Projects </h3>
                 <ul>
-                    <li> Whatsapp Bulk Sender ( using electron app & venom-bot with bulma css framework ) ( Basic Functionality completed ) </li>
+                    <li> Whatsapp Bulk Sender ( using electron app & venom-bot with bulma css framework ) ( Functionality completed ) </li>
                     <ul>
                         <li> Can send messages to members (in bulk) - without saving the contact </li>
                         <li> Can import contacts from Google Spreadsheets and local CSV files  </li>
@@ -184,12 +185,12 @@
                 <h3> Internships and Interests </h3>
                 <ul>
                     <li> Completed an Internship (training) on Ethical Hacking and Cyber Security at Supraja Technologies, Guntur, Andhra Pradesh </li>
-                    <li> Interested in the fields of Cyber Security, Networking, Artificial Intelligence, Automation, Problem Solving and Web Development. </li>
+                    <li> Interested in the fields of Mobile App Development, Cyber Security, Networking, Artificial Intelligence, Automation, Problem Solving and Web Development. </li>
                 </ul>
 
         
                 <h3> Hobbies </h3>
-                <pre style="padding-left:15px;"> Listening Music, Virtual Piano, Coding 
+                <pre style="padding-left:15px;"> Listening Music, Coding 
                 </pre>
 
                 <table id="contacts">
