--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                 <a target="_blank" href="https://github.com/Sathyamshu2357/Automate_JNTUA_results"><button class="panel-inner-buttons">Automate JNTUA results <i class="fa fa-table" aria-hidden="true"></i> </button></a>
                 <a target="_blank" href="https://github.com/Sathyamshu2357/Gmeet_Attendance_Reader"><button class="panel-inner-buttons"> G-Meet Attendance Reader <i class="fa fa-video-camera" aria-hidden="true"></i></button></a>
                 <a target="_blank" href="https://github.com/Sathyamshu2357/word_generator"><button class="panel-inner-buttons"> Word Generator </button> </a>
-                
+                <a href="/images/myw3schoolsimage.jpg" download>
+  <img src="/images/myw3schoolsimage.jpg" alt="W3Schools">
+</a>
                 <a class="panelbuttons" target="_blank" href="assets/Resume-Sathyamshubhava.pdf" ><button class="panelbuttons" ><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Formal CV  </button></a>
                 <a class="panelbuttons" target="_blank" href="src/chatarea.html"> <button class="panelbuttons">   Chat With Lisa   <i class="fa fa-comment-o" aria-hidden="true"></i></button> </a>               
                 <p style="line-height: 50px;"><br></p>
