virtual expo added

--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
 
                 <h3> Projects </h3>
                 <ul>
+                    <li> Virtual Expo ( using Flutter & Firebase - being used in our college (SRIT, ATP) ) </li>
+                    <ul>
+                        <li> Can view and review the projects of the organization </li>
+                        <li> Can conduct a Project - contest among the projects </li>
+                    </ul>
+                </ul>
+                <ul>
                     <li> Whatsapp Bulk Sender ( using electron app & venom-bot with bulma css framework ) ( Functionality completed ) </li>
                     <ul>
                         <li> Can send messages to members (in bulk) - without saving the contact </li>
