--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <h3> Technical Skills </h3>
                 <ul>
                     <li> Programming Languages : Python, Java, C</li>
-                    <li> Database Languages : NoSql</li>
+                    <li> Database Languages : SQL, NoSQL</li>
                     <li> Web Development Languages : HTML, CSS, JavaScript</li>
                     <li> Google Developer Tools : Puppeteer, Apps Script</li>
                     <li> Mobile App Development : Flutter </li>
@@ -152,7 +152,7 @@
                         <li> Student's Results of a class/college can be automated within seconds and can analyse them in an Excel sheet </li>
                     </ul>
 
-                    <li> Google Meet Attending and Attendance Reader ( using Puppeteer & Sheets API ) </li>
+                    <li> Google Meet Attender and Attendance Reader ( using Puppeteer & Sheets API ) </li>
                     <ul>
                         <li> A bot can attend the class representing You </li>
                         <li> Can read the time attended by each participant </li>
