--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
                 </table>
 		
 		<h3> Experience </h3>
-                <pre style="padding-left:15px;"> Currently Working as Member Technical Staff at Zoho Corporation Pvt Ltd. (Feb 2022 - till date)
-		 
-		 Worked as Asst System Engineer at Tata Consultancy Services (Sept 2021 - Feb 2022)
-                </pre>
+                <ul>
+                    <li> Currently Working as Member Technical Staff at Zoho Corporation Pvt Ltd. (Feb 2022 - till date) </li>
+			<li>Worked as Asst System Engineer at Tata Consultancy Services (Sept 2021 - Feb 2022)</li>
+		</ul>
 
                 <h3> Technical Skills </h3>
                 <ul>
