--- a/src/certificates.html
+++ b/src/certificates.html
@@ -24,6 +24,8 @@
             }
             
         </script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8510123876106738"
+     crossorigin="anonymous"></script>
     </head>
 
     <body style="background-color:white;">
