--- a/src/chatarea.html
+++ b/src/chatarea.html
@@ -28,7 +28,8 @@
 
 
         </script>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8510123876106738"
+     crossorigin="anonymous"></script>
     </head>
 
     <body style="background-color:black;" onload="onLoad()">
