--- a/src/sudoku.html
+++ b/src/sudoku.html
@@ -98,7 +98,8 @@
 
 
 
-
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8510123876106738"
+     crossorigin="anonymous"></script>
 	</head>
 
 	
